Capture the last 250 lines of the Rails log

--- a/.gitlab/ci/verify.gitlab-ci.yml
+++ b/.gitlab/ci/verify.gitlab-ci.yml
@@ -4,6 +4,8 @@
   image: ${VERIFY_IMAGE}
   needs:
     - release-image
+  after_script:
+    - tail -n 250 gitlab-development-kit/gitlab/log/development.log
   artifacts:
     paths:
       - ./gitlab-development-kit/gitlab/log/*.log
