--- a/.gitlab/ci/verify.gitlab-ci.yml
+++ b/.gitlab/ci/verify.gitlab-ci.yml
@@ -5,7 +5,8 @@
   needs:
     - release-image
   after_script:
-    - tail -n 250 gitlab-development-kit/gitlab/log/development.log
+    - cd /builds/gitlab-org/gitlab-development-kit/gitlab-development-kit && gdk status
+    - tail -n 250 gitlab/log/development.log
   artifacts:
     paths:
       - ./gitlab-development-kit/gitlab/log/*.log
