--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -31,6 +31,7 @@ rspec:
       - rspec.xml
     reports:
       junit: rspec.xml
+      cobertura: coverage/coverage.xml
 
 include:
   - template: Code-Quality.gitlab-ci.yml
