Move configuration commands to scripts

--- a/support/gitpod/Dockerfile
+++ b/support/gitpod/Dockerfile
@@ -33,7 +33,7 @@ RUN sudo apt-get update \
 
 RUN sudo curl https://dl.min.io/server/minio/release/linux-amd64/minio --output /usr/local/bin/minio && \
     sudo chmod +x /usr/local/bin/minio
-    
+
 RUN curl -L https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.deb.sh | sudo bash
 
 RUN export GITLAB_RUNNER_DISABLE_SKEL=true; sudo -E apt-get install gitlab-runner
@@ -71,3 +71,6 @@ RUN echo "GITLAB_BUNDLER_VERSION  $GITLAB_BUNDLER_VERSION" && \
     "
 
 RUN sudo rm -rf /workspace
+
+COPY 91-rails-hosts /home/gitpod/.bashrc.d/
+COPY startup-scripts /home/gitpod/
