Upgrade to Ruby v2.7.2
Ruby v2.7.2 is reportedly faster than 2.6, so we should use it. v2.7.2
turned off the Ruby 3.0 deprecation warnings that were present in
v2.7.1.

For now, we stick with bundler v1.17.3 since many of our dependencies
rely on that.

--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -13,6 +13,7 @@ rubocop:
   extends: .rules:code-changes
   stage: test
   script:
+    - gem install bundler -v 1.17.3
     - bundle install --jobs 4
     - make rubocop
 
@@ -20,10 +21,11 @@ rspec:
   extends: .rules:code-changes
   stage: test
   script:
+    - gem install bundler -v 1.17.3
     - bundle install --jobs 4 --path vendor/bundle
     - bundle exec rspec --format progress --format RspecJunitFormatter --out rspec.xml
   cache:
-      key: "ruby-2.6-bundle"
+      key: "ruby-2.7-bundle"
       paths:
         - ./vendor/bundle
   artifacts:
@@ -82,10 +84,11 @@ shellcheck:
 yard:
   stage: test
   script:
+    - gem install bundler -v 1.17.3
     - bundle install --jobs 4 --path vendor/bundle
     - bundle exec yardoc
   cache:
-      key: "ruby-2.6-bundle"
+      key: "ruby-2.7-bundle"
       paths:
         - ./vendor/bundle
   artifacts:
