--- a/kerberos/krb5.conf
+++ b/kerberos/krb5.conf
@@ -1,8 +1,8 @@
 [libdefaults]
-    default_realm = EXAMPLE.COM
+    default_realm = GDK.TEST
 
 [realms]
-    EXAMPLE.COM = {
-        kdc = krb5.example.com
-        admin_server = krb5.example.com
+    GDK.TEST = {
+        kdc = krb5.gdk.test
+        admin_server = krb5.gdk.test
     }
