--- a/kerberos/krb5kdc/kdc.conf
+++ b/kerberos/krb5kdc/kdc.conf
@@ -1,14 +1,13 @@
 [kdcdefaults]
-    kdc_ports = 750,88
-    kadmind_port = 749
+    kdc_ports = 88
 
 [realms]
-    EXAMPLE.COM = {
+    GDK.TEST = {
         database_name = /var/lib/krb5kdc/principal
         admin_keytab = FILE:/etc/krb5kdc/kadm5.keytab
         acl_file = /etc/krb5kdc/kadm5.acl
         key_stash_file = /etc/krb5kdc/stash
-        kdc_ports = 750,88
+        kdc_ports = 88
         max_life = 10h 0m 0s
         max_renewable_life = 7d 0h 0m 0s
         master_key_type = des3-hmac-sha1
