Add support for group SAML in gdk.yml
Group SAML can be activated via:

```
omniauth:
  group_saml:
    enabled: true
```

--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -110,6 +110,8 @@ omniauth:
     client_id: ''
     client_secret: ''
     enabled: ''
+  group_saml:
+    enabled: false
 openldap:
   enabled: false
 port: 3000
