Ruby gem version bump
Fix simple Rubocop problems introduced by newer version

--- a/.rubocop-gdk.yml
+++ b/.rubocop-gdk.yml
@@ -1,10 +1,12 @@
+---
 inherit_gem:
   gitlab-styles:
     - rubocop-default.yml
 
 AllCops:
-  TargetRubyVersion: 2.6.6
+  TargetRubyVersion: 2.7.2
   Exclude:
+    - 'Brewfile'
     - 'elasticsearch/**/*'
     - 'gitaly/**/*'
     - 'gitlab-docs/**/*'
@@ -28,10 +30,19 @@ AllCops:
     - 'sv/**/*'
     - 'tmp/**/*'
 
+CodeReuse/ActiveRecord:
+  Enabled: false
+
+Layout/LineLength:
+  Enabled: false
+
 Rails:
   Enabled: false
 
 RSpec/ContextWording:
+  Enabled: false
+
+RSpec/MultipleMemoizedHelpers:
   Enabled: false
 
 RSpec/PredicateMatcher:
