--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -102,8 +102,33 @@ nginx:
     certificate: localhost.crt
     key: localhost.key
 object_store:
+  connection:
+    provider: AWS
+    aws_access_key_id: minio
+    aws_secret_access_key: gdk-minio
+    region: gdk
+    endpoint: http://127.0.0.1:9000
+    path_style: true
+  consolidated_form: false
   enabled: false
   host: 127.0.0.1
+  objects:
+    artifacts:
+      bucket: artifacts
+    external_diffs:
+      bucket: external-diffs
+    lfs:
+      bucket: lfs-objects
+    uploads:
+      bucket: uploads
+    packages:
+      bucket: packages
+    dependency_proxy:
+      bucket: dependency_proxy
+    terraform_state:
+      bucket: terraform
+    pages:
+      bucket: pages
   port: 9000
 omniauth:
   google_oauth2:
