--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -4,24 +4,22 @@ docs_lint:
   stage: test
   needs: []
   script:
-    # Lint prose
-    - vale --minAlertLevel error doc
-    # Lint Markdown
-    - markdownlint --config .markdownlint.json 'doc/**/*.md'
+    - make lint
 
 rubocop:
   extends: .rules:code-changes
   stage: test
   script:
-    - bundle install --jobs 4
-    - make rubocop
+    - BUNDLE_ARGS="--path vendor/bundle" make rubocop
 
 rspec:
   extends: .rules:code-changes
   stage: test
+  variables:
+    - RSPEC_ARGS: "--format doc --format RspecJunitFormatter --out rspec.xml"
+    - BUNDLE_ARGS: "--path vendor/bundle"
   script:
-    - bundle install --jobs 4 --path vendor/bundle
-    - bundle exec rspec --format progress --format RspecJunitFormatter --out rspec.xml
+    - make rspec
   cache:
     key: "ruby-2.7-bundle"
     paths:
@@ -76,8 +74,12 @@ shellcheck:
   stage: test
   extends: .rules:code-changes
   image: koalaman/shellcheck-alpine:stable
+  variables:
+    - SHELL: /bin/sh
+  before_script:
+    - apk add make
   script:
-    - support/shellcheck
+    - make shellcheck
 
 yard:
   stage: test
@@ -97,4 +99,4 @@ gdk_example_yml:
   extends: .rules:code-changes
   stage: test
   script:
-    - support/ci/gdk_example_yml
+    - make gdk_example_yml
