Ignore vendor/**/* for RuboCop

--- a/.rubocop-gdk.yml
+++ b/.rubocop-gdk.yml
@@ -29,6 +29,7 @@ AllCops:
     - 'services/**/*'
     - 'sv/**/*'
     - 'tmp/**/*'
+    - 'vendor/**/*'
 
 CodeReuse/ActiveRecord:
   Enabled: false
