--- a/doc/.vale/gitlab/FutureTense.yml
+++ b/doc/.vale/gitlab/FutureTense.yml
@@ -8,7 +8,7 @@
 extends: existence
 message: 'Avoid using future tense: "%s"'
 ignorecase: true
-level: warning
+level: error
 link: https://docs.gitlab.com/ee/development/documentation/styleguide.html#language-to-avoid
 raw:
   - "(going to( |\n|[[:punct:]])[a-zA-Z]*|"
