Override the SHELL by passing it to make directly
In the `Makefile` we specify `SHELL = /bin/bash`. To override that, we
need to pass it to `make` directly.

--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -76,12 +76,10 @@ shellcheck:
   stage: test
   extends: .rules:code-changes
   image: koalaman/shellcheck-alpine:stable
-  variables:
-    SHELL: /bin/sh
   before_script:
     - apk add make
   script:
-    - make shellcheck
+    - make shellcheck SHELL=/bin/sh
 
 yard:
   stage: test
