--- a/doc/.vale/gitlab/AlertBoxStyle.yml
+++ b/doc/.vale/gitlab/AlertBoxStyle.yml
@@ -1,22 +1,21 @@
 ---
 # Error: gitlab.AlertBoxStyle
 #
-# Makes sure alert boxes follow standard formatting.
+# Makes sure alert boxes are used with block quotes.
 #
-# Checks for 4 known issues:
-# - Alert boxes with no colon, or colon outside the bold text
-# - Known incorrect capitalization of the most commonly used alert box text
+# Checks for 3 formatting issues:
+# - Alert boxes inside a block quote (">")
 # - Alert boxes with the note text on the same line
-# - Alert boxes using blockquote formatting, like "> **Note:**"
+# - Alert boxes using words other than "NOTE" or "WARNING"
 #
 # For a list of all options, see https://errata-ai.gitbook.io/vale/getting-started/styles
 extends: existence
 message: 'Alert box "%s" must use the formatting in the style guide.'
 link: https://docs.gitlab.com/ee/development/documentation/styleguide.html#alert-boxes
 level: error
+nonword: true
 scope: raw
 raw:
-  - '((NOTE|TIP|CAUTION|DANGER): \*\*[^:]*\*\*)|'
-  - '((NOTE: \*\*(NOTE|note):\*\*)|(TIP: \*\*(TIP|tip):\*\*)|(CAUTION: \*\*(CAUTION|caution):\*\*)|(DANGER: \*\*(DANGER|danger):\*\*))|'
-  - '((NOTE|TIP|CAUTION|DANGER): \*\*.*\*\*.+)|'
-  - '((\n[> ]*(\*){1,2}(NOTE|Note|note|TIP|Tip|tip|CAUTION|Caution|caution|DANGER|Danger|danger):(\*){1,2}))'
+  - '(\n *\> *(?:NOTE|WARNING)|'
+  - '\n(NOTE):[^\n]|'  # Adding "WARNING" here can cause false positives
+  - '\n *(?:> )?\**(Note|TIP|Tip|tip|CAUTION|Caution|caution|DANGER|Danger|danger|warning):.*)'  ## Adding "Warning" and "note" here can cause false positives
