--- a/doc/.vale/gitlab/SubstitutionWarning.yml
+++ b/doc/.vale/gitlab/SubstitutionWarning.yml
@@ -11,7 +11,6 @@ link: https://about.gitlab.com/handbook/communication/#top-misused-terms
 level: warning
 ignorecase: true
 swap:
-  admin: administrator
   code base: codebase
   config: configuration
   distro: distribution
@@ -19,3 +18,4 @@ swap:
   filesystem: file system
   info: information
   repo: repository
+  utilize: use
