Corrected maintainers url in dockerfile label - fixed url to contributors list - changed deprecated instruction MAINTAINER from vagrant/Dockerfile related to https://docs.docker.com/engine/reference/builder/#maintainer-deprecated

--- a/vagrant/Dockerfile
+++ b/vagrant/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:18.04
-MAINTAINER GitLab.com
+LABEL authors.maintainer "GDK contributors: https://gitlab.com/gitlab-org/gitlab-development-kit/-/graphs/master"
 
 ENV DEBIAN_FRONTEND noninteractive
 
