--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -223,10 +223,14 @@ tracer:
     version: 1.18.1
 username: git
 webpack:
+  disable_host_check: false
   host: 127.0.0.1
   incremental: false
   live_reload: true
   port: 3808
+  public_host: 127.0.0.1
+  public_https: false
+  public_port: 3808
   sourcemaps: true
   static: false
   vendor_dll: false
