Don't run bin/spring stop for before stop_hooks

--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -23,8 +23,7 @@ gdk:
     before: []
   stop_hooks:
     after: []
-    before:
-    - cd gitlab && bin/spring stop || true
+    before: []
   update_hooks:
     after: []
     before:
