Prepare CI for renaming default branch to main
In CI we can simply use $CI_DEFAULT_BRANCH in order to prepare for
renaming the branch to main.

--- a/.gitlab/ci/verify.gitlab-ci.yml
+++ b/.gitlab/ci/verify.gitlab-ci.yml
@@ -26,10 +26,10 @@ install:
   script:
     - support/ci/verify_install
 
-update_from_master:
+update_from_default_branch:
   extends: .verify_job
   script:
-    - support/ci/verify_update master
+    - support/ci/verify_update $CI_DEFAULT_BRANCH
 
 update_from_mr_branch:
   extends: .verify_job
