--- a/.gitlab/ci/pre.gitlab-ci.yml
+++ b/.gitlab/ci/pre.gitlab-ci.yml
@@ -7,4 +7,4 @@ prevent-interrupt:
   script:
     - echo "This jobs makes sure this pipeline won't be interrupted! See https://docs.gitlab.com/ee/ci/yaml/#interruptible."
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG'
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_TAG'
