--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -77,6 +77,7 @@ gitlab_shell:
   dir: "/home/git/gdk/gitlab-shell"
 grafana:
   enabled: false
+  port: 4000
 hostname: 127.0.0.1
 https:
   enabled: false
