--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -58,6 +58,11 @@ gitlab:
   dir: "/home/git/gdk/gitlab"
   rails:
     address: ''
+    puma:
+      single_mode: false
+      threads_max: 4
+      threads_min: 1
+      workers: 2
     sherlock: false
 gitlab_elasticsearch_indexer:
   auto_update: true
