--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
   DEFAULT_IMAGE: registry.gitlab.com/gitlab-org/gitlab-build-images:ruby-2.7.2-golang-1.14-git-2.28-lfs-2.9-chrome-85-node-12.18-yarn-1.22-postgresql-12-graphicsmagick-1.3.34
   VERIFY_IMAGE: $CI_REGISTRY_IMAGE/asdf-verify:$CI_COMMIT_REF_SLUG
   GDK_DEBUG: "true"
+  GIT_CURL_VERBOSE: 1
 
 default:
   image: ${DEFAULT_IMAGE}
