Support PostgreSQL rollback
- Rename existing PostgreSQL data dir early
- Execute commands using Shellout within tmp/
- Forward to GDK::PostgreSQL where possible
- Use GDK::Output for all output

--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,7 @@
 /postgresql-replica/.s.*
 /postgresql-replica/data
 /postgresql/.s.*
-/postgresql/data
+/postgresql/data*
 /postgresql_geo_port
 /postgresql_port
 /prometheus/prometheus.yml
