--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -1,5 +1,5 @@
 # Maintainers
-* @ashmckenzie @mikegreiling @tigerwnz @toon
+* @ashmckenzie @matteeyah @mikegreiling @tigerwnz @toon
 
 # Technical writing team are the default reviewers for everything in `doc/`
 /doc/ @axil @eread @marcel.amirault
