Add Reviewer Roulette for the GDK project

--- a/.gitlab/ci/_rules.gitlab-ci.yml
+++ b/.gitlab/ci/_rules.gitlab-ci.yml
@@ -50,3 +50,7 @@
 .rules:docs-code-changes:
   rules:
     - changes: *docs-code-changes
+
+.review:rules:danger:
+  rules:
+    - if: '$DANGER_GITLAB_API_TOKEN && $CI_MERGE_REQUEST_IID'
