--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -100,3 +100,11 @@ verify_gdk_example_yml:
   stage: test
   script:
     - make verify_gdk_example_yml
+
+danger-review:
+  extends:
+    - .review:rules:danger
+  image: registry.gitlab.com/gitlab-org/gitlab-build-images:danger
+  stage: test
+  script:
+    - danger --fail-on-errors=true --verbose
