code_quality needs to be code-quality
This is because of the Code-Quality.gitlab-ci.yml
include.

--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -36,7 +36,7 @@ rspec:
 include:
   - template: Code-Quality.gitlab-ci.yml
 
-code-quality:
+code_quality:
   extends:
     - .rules:code-changes
     - .docker:use-docker-in-docker
