--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -51,6 +51,7 @@ gitaly:
   config_file: "/home/git/gdk/gitaly/gitaly.config.toml"
   dir: "/home/git/gdk/gitaly"
   enabled: false
+  git_bin_path: "/home/git/gdk/gitaly/_build/deps/git/install/bin/git"
   internal_socket_dir: "/home/git/gdk/tmp/gitaly"
   log_dir: "/home/git/gdk/log/gitaly"
   repository_storages: "/home/git/gdk/repository_storages"
