--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -59,6 +59,7 @@ gitaly:
   storage_dir: "/home/git/gdk/repositories"
 gitlab:
   actioncable: {}
+  auto_update: true
   cache_classes: false
   dir: "/home/git/gdk/gitlab"
   rails:
@@ -68,6 +69,9 @@ gitlab:
       threads_min: 1
       workers: 2
     sherlock: false
+gitlab_docs:
+  auto_update: true
+  enabled: false
 gitlab_elasticsearch_indexer:
   auto_update: true
 gitlab_k8s_agent:
