--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -73,6 +73,7 @@ gitlab:
 gitlab_docs:
   auto_update: true
   enabled: false
+  port: 3005
 gitlab_elasticsearch_indexer:
   auto_update: true
 gitlab_k8s_agent:
