Add redis dir to example config yml

--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -198,7 +198,8 @@ prometheus:
   port: 9090
   praefect_exporter_port: 10101
   sidekiq_exporter_port: 3807
-redis: {}
+redis:
+  dir: "/home/git/gdk/redis"
 registry:
   api_host: 127.0.0.1
   auth_enabled: true
