Fix the path used in make postgres-replication/data
The current make task is creating the data directory which is already in
use by the primary database so it will fail when it already exists.
Based on the docs at `doc/howto/database_load_balancing.md` it seems
like this is meant to generate a directory called
`postgres-replica/data` so we've updated it to match those docs.

--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -180,6 +180,7 @@ postgresql:
   port: 5432
   replica:
     enabled: false
+  replica_data_dir: "/home/git/gdk/postgresql-replica/data"
   replica_dir: "/home/git/gdk/postgresql-replica"
   replication_user: gitlab_replication
 praefect:
